[tool.poetry]
name = "headhunterparser"
version = "0.1.0"
description = ""
authors = ["i-am-neegr <martial.artem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
